fix background color of collapse menu items on mobile

--- a/static/css/base_master.css
+++ b/static/css/base_master.css
@@ -237,7 +237,7 @@ nav .nav-item a.nav-link:hover {
 
 .navbar-mobile .nav-item a.nav-link {
   margin-right: 0px !important;
-  padding-top: 3rem;
+  margin-top: 3rem;
 }
 
 .dropdown-menu {
